--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router": "^0.11.6",
     "st": "^0.5.2",
     "xhr": "^2.0.1",
-    "xtend": "^4.0.0"
+    "xtend": "^4.0.0",
+    "pg": "^4.3.0"
   },
   "devDependencies": {
     "concat-stream": "^1.4.7",
@@ -49,6 +50,6 @@
   },
   "scripts": {
     "develop": "watchify -d site.js -o bundle.js & st -nc",
-    "start": "watchify -d site.js -o bundle.js & node example_server.js"
+    "start": "watchify -d site.js -o bundle.js & node pg_server.js"
   }
 }
